<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_create_validate"
        android:icon="@drawable/ic_action_accept"
        android:title="@string/add_item"
        android:orderInCategory="100"
        android:showAsAction="always" />
    <item android:id="@+id/action_add_photo"
        android:icon="@drawable/ic_action_camera"
        android:title="@string/add_photo"
        android:orderInCategory="100"
        android:showAsAction="always" />
    <item android:id="@+id/action_add_video"
        android:icon="@drawable/ic_action_video"
        android:title="@string/add_video"
        android:orderInCategory="100"
        android:showAsAction="always" />
    <item android:id="@+id/action_add_audio"
        android:icon="@drawable/ic_action_mic"
        android:title="@string/add_audio"
        android:orderInCategory="100"
        android:showAsAction="always" />
</menu>