<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="@android:color/white">

    <FrameLayout
        android:paddingTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.60">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/label_story_title"
                android:id="@+id/txtHeadStoryTitle"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:id="@+id/editTextStoryTitle"
                android:editable="true"
                android:inputType="text"
                android:maxLines="1"
                android:maxLength="32"
                android:textAlignment="center" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:id="@+id/editTextStoryBody"
                android:hint="@string/hint_story_body"
                android:editable="true"
                android:paddingTop="10dp" />
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:paddingTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.08">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtTextAudioPath"
                android:editable="false"
                android:hint="@string/hint_Audio_path" />

        </LinearLayout>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:layout_weight="0.07">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtViewPhotoPath"
                android:hint="@string/hint_image_path"
                android:editable="false" />

        </LinearLayout>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:paddingTop="10dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="67dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtViewVideoPath"
                android:hint="@string/hint_video_path"
                android:editable="false" />

        </LinearLayout>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:weightSum="1"
            android:visibility="invisible">

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/txtGPSPosition"
                android:editable="false" />

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:id="@+id/imgBtnAddGPS"
                android:clickable="true"
                android:src="@drawable/ic_action_location_found" />

        </LinearLayout>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:visibility="invisible">

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/editTexStoryTime"
                android:editable="false" />

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:id="@+id/imgBtnAddDate"
                android:clickable="true"
                android:src="@drawable/ic_action_time" />

        </LinearLayout>
    </FrameLayout>

</LinearLayout>